Fixes #15136 - Refresh Digest authentication implementation.
* Implemented RFC 7616 missing parameters in WWW-Authenticate and Authentication.
* Updated core and EE9's DigestAuthenticator.
* Dropped support for qop=auth-int in the client, as it was broken anyway.
* Updated server implementation to use a lighter weight storage of nonces.
* Support for non-ascii usernames in the client via `username*` parameter.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>
(cherry picked from commit f068aea0d25057de83df5ae34920b855d8643741)